--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Aayush Jung Rana
+title: Chirag Byanjankar
 logo: /assets/img/profile_out.jpeg
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
 
 show_ref_links: true
-cvlocation: /assets/Aayush_CV.pdf
-email: aayushjbrana@gmail.com
-scholar: https://scholar.google.com/citations?user=oo4zihgAAAAJ&hl=en
-linkedin: https://www.linkedin.com/in/aayush-jung-rana-5893385b/
+cvlocation: /assets/Byanjankar_Resume.pdf
+email: cbyanjankar99@gmail.com
+scholar: https://scholar.google.com/citations?view_op=list_works&hl=en&authuser=1&user=knPdFO0AAAAJ
+linkedin: https://www.linkedin.com/in/chirag-byanjankar/
