--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Chirag Byanjankar
-logo: /assets/img/profile_out.jpeg
+logo: /assets/img/image.png
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
